--- a/index.html
+++ b/index.html
@@ -3,45 +3,42 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Job Application — Upload Resume</title>
+  <title>Apply — Upload Resume (Uploadcare)</title>
   <style>
-    :root{
-      --bg: #f4f7f9;
-      --card: #fff;
-      --accent: #007bff;
-      --muted: #666;
-    }
+    :root{--bg:#f4f7f9;--card:#fff;--accent:#6c63ff;--muted:#666}
     html,body{height:100%;margin:0;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg)}
     .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:20px}
-    .card{background:var(--card);width:100%;max-width:520px;border-radius:12px;padding:20px;box-shadow:0 6px 20px rgba(0,0,0,0.06)}
-    h1{margin:0 0 10px;font-size:20px}
-    p.lead{margin:0 0 18px;color:var(--muted);font-size:14px}
-    label{font-size:13px;color:#333;margin-bottom:6px;display:block}
-    input[type="text"], input[type="email"], input[type="file"]{
-      width:100%;padding:12px;border:1px solid #d0d7de;border-radius:8px;font-size:15px;box-sizing:border-box;
+    .card{background:var(--card);width:100%;max-width:640px;border-radius:12px;padding:20px;box-shadow:0 6px 20px rgba(0,0,0,0.06)}
+    h1{margin:0 0 6px;font-size:20px}
+    p.lead{margin:0 0 14px;color:var(--muted);font-size:14px}
+    label{display:block;margin-bottom:6px;font-size:13px;color:#333}
+    input[type="text"], input[type="email"]{
+      width:100%;padding:12px;border:1px solid #d0d7de;border-radius:8px;font-size:15px;box-sizing:border-box;margin-bottom:12px;
     }
-    input[type="file"]{padding:10px}
-    .row{display:flex;gap:10px}
-    .actions{display:flex;gap:10px;align-items:center;margin-top:14px}
-    button{
-      background:var(--accent);color:#fff;border:0;padding:12px 16px;border-radius:10px;font-weight:600;cursor:pointer;
-    }
+    .widget-row{margin:6px 0 12px}
+    .actions{display:flex;gap:12px;align-items:center;margin-top:8px}
+    button{background:var(--accent);color:#fff;border:0;padding:12px 16px;border-radius:10px;font-weight:600;cursor:pointer}
     button[disabled]{opacity:.6;cursor:default}
-    .status{font-size:13px;color:var(--muted);margin-top:10px}
-    .progress-wrap{margin-top:12px;background:#eee;border-radius:10px;overflow:hidden;height:12px}
-    .progress-bar{height:100%;width:0%;background:linear-gradient(90deg,var(--accent),#0056d2);transition:width .2s}
-    .small{font-size:12px;color:#777;margin-top:6px}
-    @media (max-width:480px){
-      .card{padding:16px}
-      h1{font-size:18px}
-    }
+    .status{font-size:13px;color:var(--muted);margin-top:8px}
+    .progress-wrap{margin-top:8px;background:#eee;border-radius:10px;overflow:hidden;height:12px;display:none}
+    .progress-bar{height:100%;width:0%;background:linear-gradient(90deg,var(--accent),#4a3ce3);transition:width .2s}
+    .small{font-size:12px;color:#777;margin-top:10px}
+    .file-info{font-size:13px;color:#333;margin-top:8px}
+    @media (max-width:520px){.card{padding:16px}}
   </style>
+
+  <!-- Uploadcare widget: public key inserted below -->
+  <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
+  <script>
+    UPLOADCARE_PUBLIC_KEY = 'cabc0d1e791242b11bbe'; // your public key
+    uploadcare.start({ publicKey: UPLOADCARE_PUBLIC_KEY });
+  </script>
 </head>
 <body>
   <div class="wrap">
-    <div class="card" role="region" aria-label="Job application form">
+    <div class="card" role="region" aria-label="Application form">
       <h1>Job Application</h1>
-      <p class="lead">Upload your resume (PDF/DOC/DOCX). You'll be redirected to a thank-you page after submission.</p>
+      <p class="lead">Upload your resume. Files are stored on Uploadcare CDN. After upload we'll email you a link via FormSubmit and redirect to a thank-you page.</p>
 
       <form id="appForm">
         <label for="name">Name</label>
@@ -50,134 +47,130 @@
         <label for="email">Email</label>
         <input id="email" name="email" type="email" placeholder="you@example.com" required>
 
-        <label for="resume">Resume (PDF, DOC, DOCX)</label>
-        <input id="resume" name="resume" type="file" accept=".pdf,.doc,.docx" required>
+        <div class="widget-row">
+          <label for="ucInput">Resume (PDF / DOC / DOCX)</label>
+          <!-- Uploadcare widget input: it will open a file picker when clicked -->
+          <input id="ucInput" type="hidden" role="uploadcare-uploader"
+                 data-public-key="cabc0d1e791242b11bbe"
+                 data-tabs="file url"  <!-- allow local file upload and URL paste -->
+                 data-images-only="false"
+                 data-multiple="false"
+                 data-validators="maxSize:52428800"
+                 />
+        </div>
 
-        <div class="progress-wrap" aria-hidden="true" style="display:none" id="progressWrap">
+        <div class="file-info" id="fileInfo" aria-live="polite" style="display:none">
+          Selected file: <span id="fileName"></span>
+        </div>
+
+        <div class="progress-wrap" id="progressWrap">
           <div class="progress-bar" id="progressBar"></div>
         </div>
-        <div class="small" id="percent" style="display:none">0%</div>
 
         <div class="actions">
           <button id="submitBtn" type="submit">Submit</button>
           <div class="status" id="statusText" aria-live="polite"></div>
         </div>
       </form>
-      <p class="small">Files uploaded to file.io (temporary). You will receive an email with the download link.</p>
+
+      <p class="small">Uploads are handled by Uploadcare. You keep the FormSubmit email verification (verify once to receive emails).</p>
     </div>
   </div>
 
   <script>
-    (function(){
-      const form = document.getElementById('appForm');
-      const resumeInput = document.getElementById('resume');
-      const submitBtn = document.getElementById('submitBtn');
-      const statusText = document.getElementById('statusText');
-      const progressWrap = document.getElementById('progressWrap');
-      const progressBar = document.getElementById('progressBar');
-      const percentText = document.getElementById('percent');
+  (function(){
+    const FORM_SUBMIT_URL = 'https://formsubmit.co/sdaph1@yahoo.com';
+    const REDIRECT_URL = 'https://tcndot.github.io/f/ty.html';
 
-      const FORM_SUBMIT_URL = 'https://formsubmit.co/sdaph1@yahoo.com';
-      const FILE_IO_UPLOAD_URL = 'https://file.io/?expires=1w'; // expires=1w (change if you want)
-      const REDIRECT_URL = 'https://tcndot.github.io/f/ty.html';
+    const form = document.getElementById('appForm');
+    const widgetInput = uploadcare.Widget('#ucInput');
+    const statusText = document.getElementById('statusText');
+    const progressWrap = document.getElementById('progressWrap');
+    const progressBar = document.getElementById('progressBar');
+    const fileInfo = document.getElementById('fileInfo');
+    const fileNameSpan = document.getElementById('fileName');
+    const submitBtn = document.getElementById('submitBtn');
 
-      function setStatus(text){
-        statusText.textContent = text;
-      }
-      function setProgress(p){
-        progressBar.style.width = p + '%';
-        percentText.textContent = Math.round(p) + '%';
-      }
-      function disableForm(v=true){
-        submitBtn.disabled = v;
-        resumeInput.disabled = v;
-        document.getElementById('name').disabled = v;
-        document.getElementById('email').disabled = v;
-      }
-
-      form.addEventListener('submit', function(e){
-        e.preventDefault();
-        setStatus('');
-        const file = resumeInput.files[0];
-        if(!file){
-          alert('Please choose a resume file to upload.');
-          return;
-        }
-        // basic client-side size check (file.io supports up to 100MB typically)
-        const maxBytes = 100 * 1024 * 1024; // 100 MB
-        if(file.size > maxBytes){
-          alert('File is too large. Max 100 MB.');
-          return;
-        }
-
-        disableForm(true);
-        progressWrap.style.display = 'block';
-        percentText.style.display = 'block';
-        setProgress(0);
-        setStatus('Uploading resume...');
-
-        // Upload to file.io using XHR to get upload progress
-        const xhr = new XMLHttpRequest();
-        xhr.open('POST', FILE_IO_UPLOAD_URL);
-        xhr.responseType = 'json';
-
-        xhr.upload.onprogress = function(ev){
-          if(ev.lengthComputable){
-            const pct = (ev.loaded / ev.total) * 100;
-            setProgress(pct);
-          }
-        };
-
-        xhr.onload = async function(){
-          if(xhr.status >= 200 && xhr.status < 300 && xhr.response){
-            const resp = xhr.response;
-            if(resp.success && resp.link){
-              setProgress(100);
-              setStatus('Resume uploaded. Sending application...');
-              // send name,email, and resume link to FormSubmit
-              try {
-                const fd = new FormData();
-                fd.append('name', document.getElementById('name').value);
-                fd.append('email', document.getElementById('email').value);
-                fd.append('resume_link', resp.link);
-                // optional fields
-                fd.append('_captcha', 'false');
-                fd.append('_next', REDIRECT_URL);
-
-                const sendResp = await fetch(FORM_SUBMIT_URL, {
-                  method: 'POST',
-                  body: fd
-                });
-                // FormSubmit responds with a redirect when submitted from browser forms.
-                // We treat any 200-303 as success here.
-                setStatus('Submitted successfully — redirecting...');
-                setTimeout(() => { window.location.href = REDIRECT_URL; }, 1200);
-              } catch(err){
-                console.error(err);
-                setStatus('Error sending to FormSubmit. Try again.');
-                disableForm(false);
-              }
-            } else {
-              setStatus('Upload failed (no link). Try again.');
-              disableForm(false);
-            }
-          } else {
-            console.error('Upload failed', xhr.status, xhr.response);
-            setStatus('Upload failed. Try again.');
-            disableForm(false);
-          }
-        };
-
-        xhr.onerror = function(){
-          setStatus('Network error during upload. Check connection.');
-          disableForm(false);
-        };
-
-        const upForm = new FormData();
-        upForm.append('file', file);
-        xhr.send(upForm);
+    // show selected file name when user picks file (immediate)
+    widgetInput.onChange(function(filePromise){
+      fileInfo.style.display = 'none';
+      fileNameSpan.textContent = '';
+      if(!filePromise) return;
+      // filePromise may be a File or a Promise; handle both
+      Promise.resolve(filePromise).then(function(file){
+        if(!file || !file.name) return;
+        fileInfo.style.display = 'block';
+        fileNameSpan.textContent = file.name || file.uuid || 'uploaded file';
       });
-    })();
+    });
+
+    // helper to set status and progress
+    function setStatus(text){ statusText.textContent = text; }
+    function setProgress(p){
+      progressBar.style.width = p + '%';
+      progressWrap.style.display = (p > 0 && p < 100) ? 'block' : (p >= 100 ? 'block' : 'none');
+      if(p >= 100){ setTimeout(()=> progressWrap.style.display='none', 600); }
+    }
+    function disableForm(v=true){
+      submitBtn.disabled = v;
+      document.getElementById('name').disabled = v;
+      document.getElementById('email').disabled = v;
+    }
+
+    form.addEventListener('submit', async function(e){
+      e.preventDefault();
+      setStatus('');
+      setProgress(0);
+
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      if(!name || !email){ alert('Please enter name and email'); return; }
+
+      // ensure a file selected
+      const widgetValue = widgetInput.value();
+      if(!widgetValue){
+        alert('Please select a resume file first.');
+        return;
+      }
+
+      disableForm(true);
+      setStatus('Uploading to Uploadcare...');
+
+      try {
+        // widgetInput.uploadProgress(file) is not provided; use the file promise and then start uploading
+        const file = await widgetInput.upload(); // uploads and resolves to fileInfo
+        // uploadcare's promise resolves to fileInfo object
+        // file.cdnUrl is the CDN link; file.name is filename
+        const cdnUrl = file.cdnUrl || file.cdn_url || file.originalUrl || file.original_url || null;
+        const filename = file.name || file.uuid || '';
+
+        if(!cdnUrl){
+          throw new Error('No CDN URL returned by Uploadcare');
+        }
+
+        setProgress(100);
+        setStatus('Upload complete. Sending application...');
+
+        // Post to FormSubmit using FormData so redirect works and FormSubmit receives fields
+        const fd = new FormData();
+        fd.append('name', name);
+        fd.append('email', email);
+        fd.append('resume_link', cdnUrl);
+        fd.append('_captcha', 'false');
+        fd.append('_next', REDIRECT_URL);
+
+        const resp = await fetch(FORM_SUBMIT_URL, { method: 'POST', body: fd });
+        // treat as success if fetch doesn't throw
+        setStatus('Submitted — redirecting...');
+        setTimeout(()=> window.location.href = REDIRECT_URL, 900);
+
+      } catch(err){
+        console.error(err);
+        setStatus('Error: ' + (err.message || 'Upload failed.'));
+        disableForm(false);
+      }
+    });
+  })();
   </script>
 </body>
 </html>
